Moved pages in main folder. Added: ForgotPasswordPage page, new methods in BasePage , new locators in BasePage and HomePage.

--- a/pom.xml
+++ b/pom.xml
@@ -52,5 +52,32 @@
             <version>5.4.1</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>io.cucumber</groupId>
+            <artifactId>cucumber-core</artifactId>
+            <version>7.2.3</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.cucumber</groupId>
+            <artifactId>cucumber-core</artifactId>
+            <version>1.2.6</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.cucumber</groupId>
+            <artifactId>cucumber-junit</artifactId>
+            <version>7.13.0</version>
+        </dependency>
+        <dependency>
+            <groupId>io.cucumber</groupId>
+            <artifactId>cucumber-junit</artifactId>
+            <version>7.13.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.cognifide.cq.actions</groupId>
+            <artifactId>cq-actions</artifactId>
+            <version>2.1.0</version>
+        </dependency>
     </dependencies>
 </project>
